force-app/main/default/objects/CampaignMember/fields/Affiliate_id__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_id__c</fullName>
    <label>Affiliate id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>