force-app/main/default/objects/CampaignMember/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>MIS-4271</description>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event - Owned Branded</fullName>
            </value>
            <value>
                <fullName>Event - External</fullName>
            </value>
            <value>
                <fullName>Event - Dinner</fullName>
            </value>
            <value>
                <fullName>Event - Trade Show</fullName>
            </value>
            <value>
                <fullName>Event - Customer Event</fullName>
            </value>
            <value>
                <fullName>Event - Owned</fullName>
            </value>
            <value>
                <fullName>Event - Online</fullName>
            </value>
            <value>
                <fullName>Content - Report</fullName>
            </value>
            <value>
                <fullName>Content - Case Study</fullName>
            </value>
            <value>
                <fullName>Content - Deck</fullName>
            </value>
            <value>
                <fullName>Content - Infographic</fullName>
            </value>
            <value>
                <fullName>Content - Ebook</fullName>
            </value>
            <value>
                <fullName>Content - White paper</fullName>
            </value>
            <value>
                <fullName>Content - Blog Post</fullName>
            </value>
            <value>
                <fullName>Content - Video</fullName>
            </value>
            <value>
                <fullName>Email - One-off</fullName>
            </value>
            <value>
                <fullName>Email - One-off Cadence</fullName>
            </value>
            <value>
                <fullName>Email - Automated Cadence</fullName>
            </value>
            <value>
                <fullName>Email - Triggered</fullName>
            </value>
            <value>
                <fullName>Email - Newsletter</fullName>
            </value>
            <value>
                <fullName>Blog Post</fullName>
            </value>
            <value>
                <fullName>Blog Post - CTA</fullName>
            </value>
            <value>
                <fullName>Blog Post - Contact us</fullName>
            </value>
            <value>
                <fullName>Blog Post - Whitepaper</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Chat Bot - One-off</fullName>
            </value>
            <value>
                <fullName>Chat Bot Automated</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Get a demo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>