force-app/main/default/objects/CampaignMember/fields/Browser_Language__c.field-meta.xml
<CustomField>
    <fullName>Browser_Language__c</fullName>
    <label>Browser Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>