force-app/main/default/objects/CampaignMember/fields/Button_Caption__c.field-meta.xml
<CustomField>
    <fullName>Button_Caption__c</fullName>
    <description>MIS-4714</description>
    <label>Button Caption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>