force-app/main/default/objects/CampaignMember/fields/Campaign_Description__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Description__c</fullName>
    <description>MIS-7645</description>
    <label>Campaign Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>