force-app/main/default/objects/CampaignMember/fields/Campaign_name_from_leadcapture__c.field-meta.xml
<CustomField>
    <fullName>Campaign_name_from_leadcapture__c</fullName>
    <label>Campaign name from leadcapture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>