force-app/main/default/objects/CampaignMember/fields/Campaign_Name_UTM__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_UTM__c</fullName>
    <description>MIS-2533</description>
    <label>Campaign Name UTM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>