force-app/main/default/objects/CampaignMember/fields/Campaign_Primary_Solution__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Primary_Solution__c</fullName>
    <description>MIS-7645</description>
    <formula>TEXT(Campaign.Solution__c)</formula>
    <label>Campaign Primary Solution</label>
    <type>Text</type>
</CustomField>