force-app/main/default/objects/CampaignMember/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <formula>text(Campaign.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Status</label>
    <type>Text</type>
</CustomField>