force-app/main/default/objects/CampaignMember/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>#1112876 Need for the alert purpose</description>
    <formula>TEXT( Campaign.Type )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Type</label>
    <type>Text</type>
</CustomField>