force-app/main/default/objects/CampaignMember/fields/Contact_Lead_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Business_Unit__c</fullName>
    <description>For Campaign Members Reports
MIS-2169</description>
    <formula>IF
(
ISBLANK( ContactId ),
TEXT(Lead.Business_Unit__c),
Contact.Business_Unit__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact\Lead Business Unit</label>
    <type>Text</type>
</CustomField>