force-app/main/default/objects/CampaignMember/fields/Contact_Lead_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Country__c</fullName>
    <description>For Campaign Members Reports
MIS-2169</description>
    <formula>IF
(
ISBLANK( ContactId ),
 Lead.Country ,
 Contact.Account.BillingCountry 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact\Lead Country</label>
    <type>Text</type>
</CustomField>