force-app/main/default/objects/CampaignMember/fields/Contact_Lead_Employee_Max__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Employee_Max__c</fullName>
    <description>For Campaign Members Reports
MIS-2169</description>
    <formula>IF
(
ISBLANK (ContactId),
Lead.Employees_Max__c ,
Contact.Employees_Max_FR__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact\Lead Employee Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>