force-app/main/default/objects/CampaignMember/fields/Contact_Lead_Employee_Min__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Employee_Min__c</fullName>
    <description>For Campaign Members Reports
MIS-2169</description>
    <formula>IF
(
ISBLANK (ContactId),
Lead.Employees_Min__c ,
 Contact.Employees_Min_FR__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact\Lead Employee Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>