force-app/main/default/objects/CampaignMember/fields/Contact_Lead_FitScore__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_FitScore__c</fullName>
    <formula>IF
(
ISBLANK (ContactId),
 TEXT(Lead.SW_Fit_Score__c),
TEXT( Contact.SW_Fit_Score__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact\Lead FitScore</label>
    <type>Text</type>
</CustomField>