force-app/main/default/objects/CampaignMember/fields/Contact_Lead_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Last_Activity_Date__c</fullName>
    <description>For Campaign Members Reports
MIS-2169</description>
    <formula>IF
(
ISBLANK (ContactId),
Lead.LastActivityDate  ,
Contact.LastActivityDate 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact\Lead Last Activity Date</label>
    <type>Date</type>
</CustomField>