force-app/main/default/objects/CampaignMember/fields/Contact_Lead_MIR_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_MIR_Status__c</fullName>
    <formula>IF
(
ISBLANK( ContactId ),
 TEXT(Lead.MIR_Status__c ) ,
 TEXT(Contact.MIR_Status__c ) 
)</formula>
    <label>Contact/Lead MIR Status</label>
    <type>Text</type>
</CustomField>