force-app/main/default/objects/CampaignMember/fields/Contact_Lead_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Owner_Division__c</fullName>
    <description>For Campaign Members Reports
MIS-2169</description>
    <formula>IF(ISBLANK (ContactId),Lead.Owner_Division__c ,Contact.Owner_Division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact\Lead Owner Division</label>
    <type>Text</type>
</CustomField>