force-app/main/default/objects/CampaignMember/fields/Contact_Lead_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Owner_Email__c</fullName>
    <description>Created for email alerts
Populates only before the specific email alert
(Not accurate for reporting)</description>
    <label>Contact/Lead Owner Email (For Alert)</label>
    <type>Email</type>
</CustomField>