force-app/main/default/objects/CampaignMember/fields/Contact_Lead_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Owner_Name__c</fullName>
    <description>For Campaign Members Reports
MIS-2169</description>
    <formula>IF
(
ISBLANK (ContactId),
 Lead.Owner:User.FirstName  &amp; &quot; &quot; &amp;  Lead.Owner:User.LastName ,
 Contact.Contact_Owner_Name__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact\Lead Owner Name</label>
    <type>Text</type>
</CustomField>