force-app/main/default/objects/CampaignMember/fields/Contact_Lead_Seniority__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Seniority__c</fullName>
    <formula>IF
(
ISBLANK( ContactId ),
 TEXT(Lead.Seniority__c) ,
 TEXT(Contact.Seniority__c ) 
)</formula>
    <label>Contact/Lead Seniority</label>
    <type>Text</type>
</CustomField>