force-app/main/default/objects/CampaignMember/fields/Contact_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Status__c</fullName>
    <description>For Campaign Members Reports
MIS-2169</description>
    <formula>IF
(
ISBLANK (ContactId),
 TEXT(Lead.Status),
TEXT( Contact.Status__c ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact\Lead Status</label>
    <type>Text</type>
</CustomField>