force-app/main/default/objects/CampaignMember/fields/Contact_Lead_Strategic_Region__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_Strategic_Region__c</fullName>
    <description>For Campaign Members Reports
MIS-2169</description>
    <formula>IF
(
ISBLANK( ContactId ),
TEXT( Lead.Strategic_Region__c ),
TEXT(Contact.Account.Strategic_Region__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact\Lead Strategic Region</label>
    <type>Text</type>
</CustomField>