force-app/main/default/objects/CampaignMember/fields/Contact_Lead_User_is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lead_User_is_Owner__c</fullName>
    <formula>IF
(
ISBLANK( ContactId ),
Lead.User_is_Owner__c,
Contact.User_is_Owner__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact/Lead User is Owner</label>
    <type>Checkbox</type>
</CustomField>