force-app/main/default/objects/CampaignMember/fields/Created_By_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Full_Name__c</fullName>
    <formula>CreatedBy.FirstName + &quot; &quot; +  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Full Name</label>
    <type>Text</type>
</CustomField>