force-app/main/default/objects/CampaignMember/fields/Created_Date_Modified__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Modified__c</fullName>
    <description>MIS-4882</description>
    <label>Created Date Modified</label>
    <type>DateTime</type>
</CustomField>