force-app/main/default/objects/CampaignMember/fields/External_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Campaign_Id__c</fullName>
    <description>The ID of the Campaign from an external system like Linkedin, etc...</description>
    <label>External Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>