force-app/main/default/objects/CampaignMember/fields/Form_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_File_URL__c</fullName>
    <description>MIS-5946</description>
    <label>Form File URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>