force-app/main/default/objects/CampaignMember/fields/Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_URL__c</fullName>
    <description>MIS-4232</description>
    <label>Form URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>