force-app/main/default/objects/CampaignMember/fields/fr_Contact_Lead_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>fr_Contact_Lead_Owner_Email__c</fullName>
    <description>MIS-2498</description>
    <formula>IF( NOT(ISBLANK( ContactId )), Contact.Owner.Email, Lead.Owner:User.Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact/Lead Owner Email</label>
    <type>Text</type>
</CustomField>