force-app/main/default/objects/CampaignMember/fields/How_likely_are_you_to_recommend_SW__c.field-meta.xml
<CustomField>
    <fullName>How_likely_are_you_to_recommend_SW__c</fullName>
    <description>How likely is it that you would recommend the SimilarWeb</description>
    <inlineHelpText>How likely is it that you would recommend the SimilarWeb</inlineHelpText>
    <label>How likely are you to recommend SW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>