force-app/main/default/objects/CampaignMember/fields/How_relevant_was_the_information_to_your__c.field-meta.xml
<CustomField>
    <fullName>How_relevant_was_the_information_to_your__c</fullName>
    <description>How relevant was the information to your work</description>
    <inlineHelpText>How relevant was the information to your work</inlineHelpText>
    <label>How relevant was the information</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>