force-app/main/default/objects/CampaignMember/fields/Interest_Rating__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rating__c</fullName>
    <label>Interest Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>