force-app/main/default/objects/CampaignMember/fields/Is_First_touch__c.field-meta.xml
<CustomField>
    <fullName>Is_First_touch__c</fullName>
    <description>MIS-4232</description>
    <label>Is First touch</label>
    <type>Date</type>
</CustomField>