force-app/main/default/objects/CampaignMember/fields/Is_Last_touch__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_touch__c</fullName>
    <description>MIS-4232</description>
    <label>Is Last touch</label>
    <type>Date</type>
</CustomField>