force-app/main/default/objects/CampaignMember/fields/Join_Time__c.field-meta.xml
<CustomField>
    <fullName>Join_Time__c</fullName>
    <label>Join Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>