force-app/main/default/objects/CampaignMember/fields/Join_URL__c.field-meta.xml
<CustomField>
    <fullName>Join_URL__c</fullName>
    <description>MIS-3512
This allows sending email reminders with the unique join URL</description>
    <label>Join URL</label>
    <type>Url</type>
</CustomField>