force-app/main/default/objects/CampaignMember/fields/Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page__c</fullName>
    <description>MIS-4232</description>
    <label>Landing Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>