force-app/main/default/objects/CampaignMember/fields/Leave_Time__c.field-meta.xml
<CustomField>
    <fullName>Leave_Time__c</fullName>
    <label>Leave Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>