force-app/main/default/objects/CampaignMember/fields/MarkOps_ModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>MarkOps_ModifiedDate__c</fullName>
    <description>MIS-3677</description>
    <label>MarkOps ModifiedDate</label>
    <type>DateTime</type>
</CustomField>