force-app/main/default/objects/CampaignMember/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <description>MIS-4232</description>
    <label>Referrer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>