force-app/main/default/objects/CampaignMember/fields/Registration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date_Time__c</fullName>
    <label>Registration Date/Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>