force-app/main/default/objects/CampaignMember/fields/Related_Record_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Owner_Role__c</fullName>
    <description>MIS-1161</description>
    <formula>IF(
 
NOT(ISBLANK(Contact.Owner_Role__c )), Contact.Owner_Role__c , Lead.Owner_Role__c 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record Owner Role</label>
    <type>Text</type>
</CustomField>