force-app/main/default/objects/CampaignMember/fields/SfCmpid_from_leadCapture__c.field-meta.xml
<CustomField>
    <fullName>SfCmpid_from_leadCapture__c</fullName>
    <label>SfCmpid from leadCapture</label>
    <length>50</length>
    <type>Text</type>
</CustomField>