force-app/main/default/objects/CampaignMember/fields/Skip_Automation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to skip flows when bulk creating \ restoring</description>
    <label>Skip Automation</label>
    <type>Checkbox</type>
</CustomField>