force-app/main/default/objects/CampaignMember/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <description>MIS-2533</description>
    <label>Target Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>