force-app/main/default/objects/CampaignMember/fields/Time_in_Session__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Session__c</fullName>
    <label>Time in Session</label>
    <length>100</length>
    <type>Text</type>
</CustomField>