force-app/main/default/objects/CampaignMember/fields/Webinar_Answer__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Answer__c</fullName>
    <label>Webinar Answer</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>