force-app/main/default/objects/CampaignMember/fields/Webinar_Question__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Question__c</fullName>
    <label>Webinar Question</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>